Fixed whitespace and added missing closing tags in various HTML and CSS files.

--- a/css/home.css
+++ b/css/home.css
@@ -71,17 +71,19 @@
   color: #333;
 }
 
-.removeButton{
+.removeButton {
   position: absolute;
   bottom: 0;
   right: 0;
 }
 
-.like-button i, .dislike-button i, .removeButton i {
+.like-button i,
+.dislike-button i,
+.removeButton i {
   font-size: 1.7em;
 }
 
-.message button:hover{
+.message button:hover {
   color: #666;
   background-color: none;
 }
